--- a/custom_styles.css
+++ b/custom_styles.css
@@ -153,3 +153,11 @@ font-size: 16px;
    font-family: "Arial",Arial,sans-serif;
  }
  
+.toggle {
+  height: 1.55em;
+  overflow-y: hidden;
+}
+
+.toggle.open {
+  height: auto;
+}
